# sop-doc-creation

./: .gitignore  CHANGELOG.md  azure.env.sample  azure.yaml  implementation_details.md  readme.md  requirements_v2.txt  sample.env  setup.md
.devcontainer/: devcontainer.json
infra/: main.bicep  main.json  main.parameters.json
infra/modules/ai/: cognitiveservices.bicep
infra/modules/app/: containerapp.bicep
infra/modules/functionapp/: functionapp.bicep
infra/modules/monitoring/: monitor.bicep
infra/modules/storage/: storageaccount.bicep
infra/modules/webapp/: identity.bicep  webapp.bicep
notebook/: requirements.txt  requirements_v2.txt
scripts/: prepare-oneclick-template.sh  readme.md  set-env.ps1  set-env.sh  upload-public-docker-image.sh
src/: straemlit_app.py
src/blob-trigger/: function_app.py  requirements.txt
src/frontend/: Dockerfile  helpers.py  pyproject.toml  requirements.txt  requirements_first_level.txt  requirements_v2.txt  startup.sh  streamlit_app.py
src/frontend/.streamlit/: config.toml
src/modules/: helpers.py
