[project]
name = "sop-doc-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-speech>=1.42.0",
    "azure-identity>=1.19.0",
    "ffmpeg>=1.4",
    "ipython>=8.31.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "moviepy==1.0.3",
    "openai>=1.60.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "pytubefix>=8.12.0",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "wordcloud>=1.9.4",
]
